--- a/blog.html
+++ b/blog.html
@@ -4,10 +4,10 @@ title: Blog
 ---
 <h1>Latest Posts</h1>
 
-<ul>
+<ul class="blog-list">
   {% for post in site.posts %}
-    <li>
-      <h2><a href="./{{ post.url }}">{{ post.title }}</a></h2>
+    <li class="blog-list__item">
+      <h2><a class="blog-list__item__title" href="{{ post.url }}">{{ post.title }}</a></h2>
       <p>{{ post.excerpt }}</p>
     </li>
   {% endfor %}
